--- a/MECAMobile/WebContent/css_and_ai/styles.css
+++ b/MECAMobile/WebContent/css_and_ai/styles.css
@@ -2,6 +2,49 @@
 /******************MOBILE FIRST******************/
 
 @media screen and (max-width:480px){
+	/******************CELL VIEW - About Page START*****************/
+	.aboutContent
+	{
+		width: 90%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.wrapAbout img, .meetTheCreators img
+	{
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	/******************CELL VIEW - About Page END*****************/
+	/******************TABLET VIEW - Submission START******************/
+	.submit{
+		width: 95%;
+		margin-left: auto;
+		margin-right:auto;
+	}
+	.submissionBoard form
+	{
+		margin-left:5%;
+	}
+	.submissionBoard input 
+	{
+		float:right;
+		width: 80%;
+	}
+	.submissionBoard img 
+	{
+		margin-top: 70px;
+		width: 80%;
+		margin-left: auto;
+		margin-right:auto;
+		
+	}
+	.submissionBoard textarea
+	{
+		width: 100%;
+		height: 260px;
+	}
+	/******************TABLET VIEW - Submission END******************/
 	
 	.mecaSameLineBurger
 	{
@@ -190,10 +233,265 @@
 	  opacity: 0.97;
 	}
 }
+/******************TABLET VIEW - Refactor repetitive code******************/
+@media screen and (min-width:481px) and (max-width:953px){
+	/******************TABLET VIEW - About Page START*****************/
+	.aboutContent
+	{
+		width: 90%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.wrapAbout img, .meetTheCreators img
+	{
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	/******************TABLET VIEW - About Page END*****************/
+	/******************TABLET VIEW - Submission START******************/
+	.submit{
+		width: 95%;
+		margin-left: auto;
+		margin-right:auto;
+	}
+	.submissionBoard form
+	{
+		margin-left:5%;
+	}
+	.submitButton{
+		width: 100%;
+	}
+	.submissionBoard input
+	{
+		float:right;
+		width: 80%;
+	}
+	.submissionBoard img 
+	{
+		width: 80%;
+		margin-left: auto;
+		margin-right:auto;
+		
+	}
+	.submissionBoard textarea
+	{
+		width: 100%;
+		height: 260px;
+	}
+	
+	/******************TABLET VIEW - Submission END******************/
+	.mecaSameLineBurger
+	{
+		display: inline;
+		background-color: white;
+	    position:fixed;
+	    top:0;
+	    width:100%;
+	    height: 70px;
+	    z-index:100;
+	}
+	
+	.headerPic
+	{
+		position:fixed;
+		float: left;
+		z-index:5;
+		margin-top: 26px;
+		margin-left: 40px;
+		
+	}
+	.headerPic img
+	{
+		height: 30px;
+	}
+	 .storiesContent 
+	 {
+	 	margin-top: 100px;
+	 }
+	
+	.storiesContent img
+	{
+		border-radius: 40px 1px 40px;
+		width: 100%;
+		height: 200px;
+	}
+	
+	figure
+	{
+		margin-bottom: 40px;
+		width: 60%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	a
+	{
+	  text-decoration: none;
+	  color: red;
+	  
+	  transition: color 0.3s ease;
+	}
+	
+	a:hover
+	{
+	  color: red;
+	}
+	
+	#menuToggle
+	{
+	  float:right;
+	  margin-top:20px;
+	  display: block;
+	  position: relative;
+	  top: 10px;
+	  right: 58px;
 
+	  z-index: 1;
+	  
+	  -webkit-user-select: none;
+	  user-select: none;
+	}
+	#menuToggle input
+	{
+	  display: block;
+	  width: 40px;
+	  height: 32px;
+	  position: absolute;
+	  top: -7px;
+	  left: -5px;
+	  cursor: pointer;
+	  opacity: 0; /* hide this */
+	  z-index: 2; /* and place it over the hamburger */
+	  
+	  -webkit-touch-callout: none;
+	}
+	
+	/*
+	 * Just a quick hamburger
+	 */
+	#menuToggle span
+	{
+	  display: block;
+	  width: 33px;
+	  height: 4px;
+	  margin-bottom: 5px;
+	  position: relative;
+	  background: red;
+	  border-radius: 3px;
+	  z-index: 1;
+	  transform-origin: 4px 0px;
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              opacity 0.55s ease;
+	}
+	#menuToggle span:first-child
+	{
+	  transform-origin: 0% 0%;
+	}
+	
+	#menuToggle span:nth-last-child(2)
+	{
+	  transform-origin: 0% 100%;
+	}
+	
+	/* 
+	 * Transform all the slices of hamburger
+	 * into a crossmark.
+	 */
+	#menuToggle input:checked ~ span
+	{
+	  opacity: 1;
+	  transform: rotate(45deg) translate(-2px, -1px);
+	  background: red;
+	}
+	
+	/*
+	 * But let's hide the middle one.
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(3)
+	{
+	  opacity: 0;
+	  transform: rotate(0deg) scale(0.2, 0.2);
+	}
+	
+	/*
+	 * Ohyeah and the last one should go the other direction
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(2)
+	{
+	  opacity: 1;
+	  transform: rotate(-45deg) translate(0, -1px);
+	}
+	
+	/*
+	 * Make this absolute positioned
+	 * at the top right of the screen
+	 */
+	#menu
+	{
+	  position: absolute;
+	  width: 300px;
+	  margin: -100px 0 0 -265px;
+	  padding: 50px;
+	  padding-top: 125px;
+	  
+	  opacity: 0.97;
+	  background: white;
+	  list-style-type: none;
+	  -webkit-font-smoothing: antialiased;
+	  /* to stop flickering of text in safari */
+	  
+	  transform-origin: 0% 0%;
+	  transform: translate(100%, 0);
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	}
+	
+	#menu li
+	{
+	  list-style:none;
+	  padding: 10px 0;
+	  margin-left: -12px;
+	  font-size: 18px;
+	}
+	
+	/*
+	 * And let's fade it in from the left
+	 */
+	#menuToggle input:checked ~ ul
+	{
+	  transform: scale(1.0, 1.0);
+	  opacity: 0.97;
+	}
+	.storyPageContent
+	{
+		width:90%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	.storyPageContent img
+	{
+		float:left; 
+		width: 50%;
+		border-radius: 40px 1px 40px;
+		margin-right: 5%;
+	} 
+	
+	.storyPageContent iframe
+	{
+		width:98%;
+		height: 200px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+/******************DESKTOP VIEW******************/
 /******************TEMPLATE******************/
 /******************NAVIGATION******************/
-@media screen and (min-width:481px){
+@media screen and (min-width:954px){
 
 	
 	/**************Responsive design begin********/
@@ -311,13 +609,7 @@
 		margin-right: 5%;
 	} 
 	
-	.storyPageContent iframe
-	{
-		width:98%;
-		height: 450px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+	
 	/* .backToStories{
 		float:left;
 		color:red;
@@ -336,13 +628,14 @@
 		margin-left:43%;
 	}
 	
-	.Jadel 
+	.Valenta 
 	{
 		width:47%;
 		float: right;
 		margin-left: 30px;
 	}
-	.Valenta 
+	
+	.Jadel 
 	{
 		width: 47%;
 		float: left;
