--- a/MECAMobile/stories/styles.css
+++ b/MECAMobile/stories/styles.css
@@ -132,6 +132,10 @@ figcaption{
 	margin-right: 5%;
 }
 
+    .storyPageContent iframe{
+        width: 90%;
+    }
+
 /* .backToStories{
 	float:left;
 	color:red;
