--- a/MECAMobile/css_and_ai/styles.css
+++ b/MECAMobile/css_and_ai/styles.css
@@ -2,16 +2,14 @@
 /******************MOBILE FIRST******************/
 
 @media screen and (max-width:480px){
-    body{
-        width: 100%;
-        margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-    }
+	body
+	{
+		width: 100%;
+	}
 	/******************CELL VIEW - About Page START*****************/
 	.aboutContent
 	{
-		width: 100%;
+		width: 90%;
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -22,7 +20,7 @@
 		margin-right: auto;
 	}
 	/******************CELL VIEW - About Page END*****************/
-	/******************TABLET VIEW - Submission START******************/
+	/******************CELL VIEW - Submission START******************/
 	.submit{
 		width: 95%;
 		margin-left: auto;
@@ -50,7 +48,7 @@
 		width: 100%;
 		height: 260px;
 	}
-	/******************TABLET VIEW - Submission END******************/
+	/******************CELL VIEW - Submission END******************/
 	
 	.mecaSameLineBurger
 	{
@@ -76,10 +74,13 @@
 	{
 		height: 30px;
 	}
+	/******************CELL VIEW - Stories START******************/
 	 .storiesContent 
 	 {
-        width: 100%;
 	 	margin-top: 100px;
+	 	width:100%;
+	 	margin-left: -150;
+	 	margin-right: auto;
 	 }
 	.storiesContent img
 	{
@@ -93,7 +94,7 @@
 		width: 100%;
 		height: 200px;
 	}
-	
+	/******************CELL VIEW - Stories  END******************/
 	figure
 	{
 		margin-bottom: 40px;
