--- a/MECAMobile/css_and_ai/styles.css
+++ b/MECAMobile/css_and_ai/styles.css
@@ -1,4 +1,5 @@
 @CHARSET "ISO-8859-1";
+
 /******************MOBILE FIRST******************/
 
 @media screen and (max-width:480px){
@@ -75,6 +76,16 @@
 		height: 30px;
 	}
 	/******************CELL VIEW - Stories START******************/
+	.back-to-meca-button input
+	{
+		min-height:70px;
+		color:red;
+	}
+	
+	iframe
+	{
+		width: 100%;
+	}
 	 .storiesContent 
 	 {
 	 	margin-top: 100px;
