--- a/MECAMobile/css_and_ai/styles.css
+++ b/MECAMobile/css_and_ai/styles.css
@@ -49,7 +49,7 @@
 		height: 260px;
 	}
 	/******************CELL VIEW - Submission END******************/
-	
+	/******************CELL VIEW - Navigation - START******************/
 	.mecaSameLineBurger
 	{
 		display: inline;
@@ -74,32 +74,7 @@
 	{
 		height: 30px;
 	}
-	/******************CELL VIEW - Stories START******************/
-	 .storiesContent 
-	 {
-	 	margin-top: 100px;
-	 	width:100%;
-	 	margin-left: -150;
-	 	margin-right: auto;
-	 }
-	.storiesContent img
-	{
-	 	width:100%;
-	 	display: block;
-	}
 	
-	.storiesContent img
-	{
-		border-radius: 40px 1px 40px;
-		width: 100%;
-		height: 200px;
-	}
-	/******************CELL VIEW - Stories  END******************/
-	figure
-	{
-		margin-bottom: 40px;
-	}
-
 	a
 	{
 	  text-decoration: none;
@@ -212,7 +187,7 @@
 	  padding: 50px;
 	  padding-top: 125px;
 	  
-	  opacity: 0.97;
+	  opacity: 0.8;
 	  background: white;
 	  list-style-type: none;
 	  -webkit-font-smoothing: antialiased;
@@ -238,8 +213,38 @@
 	#menuToggle input:checked ~ ul
 	{
 	  transform: scale(1.0, 1.0);
-	  opacity: 0.97;
+	  opacity: 0.9;
 	}
+	
+	
+	/******************CELL VIEW - Navigation - END******************/
+	/******************CELL VIEW - Stories START******************/
+	 .storiesContent 
+	 {
+	 	margin-top: 100px;
+	 	width:100%;
+	 	margin-left: -150;
+	 	margin-right: auto;
+	 }
+	.storiesContent img
+	{
+	 	width:100%;
+	 	display: block;
+	}
+	
+	.storiesContent img
+	{
+		border-radius: 40px 1px 40px;
+		width: 100%;
+		height: 200px;
+	}
+	/******************CELL VIEW - Stories  END******************/
+	figure
+	{
+		margin-bottom: 40px;
+	}
+	
+	
 }
 /******************TABLET VIEW - Refactor repetitive code******************/
 @media screen and (min-width:481px) and (max-width:953px){
@@ -445,7 +450,7 @@
 	  padding: 50px;
 	  padding-top: 125px;
 	  
-	  opacity: 0.97;
+	  opacity: 0.8;
 	  background: white;
 	  list-style-type: none;
 	  -webkit-font-smoothing: antialiased;
@@ -471,7 +476,7 @@
 	#menuToggle input:checked ~ ul
 	{
 	  transform: scale(1.0, 1.0);
-	  opacity: 0.97;
+	  opacity: 0.9;
 	}
 	.storyPageContent
 	{
@@ -521,18 +526,8 @@
 	{
 		width: 95%;
 	}
-	.nav
-	{
-		height: 50px;
-		position:fixed;
-		width:95%;
-		bottom: 85%;
-		border-top: 100px solid white;
-	  	background-color: white;
-	  	/******** margin-left:2%; - changed for responsive reasons*****/
-	  	margin-left:-1%;
-	  	z-index: 3;
-	}
+	
+	/******************DESKTOP - Menu START******************/
 	
 	.nav img
 	{
@@ -540,36 +535,174 @@
 		float:left;
 		width: 19%;
 	}
-	.nav ul 
+	.mecaSameLineBurger
 	{
-		width: 80%;
-	    list-style-type: none;
-	    padding: 0;
-	    float: right;
-	    margin-top: 10px;
-	    border-right: solid red;
-	    border-top: solid red;
-	    border-bottom: solid red;
-	}
-	.nav li 
-	{
-	    margin-left:60px;
-	    display: inline;
-	}
-	.nav a
-	{
-		margin-left: 15%;
-	}
-	.nav a:link 
-	{
-	    text-decoration: none;
-	    color: black;
+		display: inline;
+		background-color: white;
+	    position:fixed;
+	    top:0;
+	    width:100%;
+	    height: 70px;
+	    z-index:100;
 	}
 	
-	.nav a:visited
+	.headerPic
 	{
-		color: black;
+		position:fixed;
+		float: left;
+		z-index:5;
+		margin-top: 26px;
+		margin-left: 40px;
+		
 	}
+	.headerPic img
+	{
+		height: 50px;
+	}
+	
+	a
+	{
+	  text-decoration: none;
+	  color: red;
+	  
+	  transition: color 0.3s ease;
+	}
+	
+	a:hover
+	{
+	  color: red;
+	}
+	
+	
+	#menuToggle
+	{
+	  float:right;
+	  margin-top:20px;
+	  display: block;
+	  position: relative;
+	  top: 30px;
+	  right: 58px;
+
+	  z-index: 1;
+	  
+	  -webkit-user-select: none;
+	  user-select: none;
+	}
+	#menuToggle input
+	{
+	  display: block;
+	  width: 40px;
+	  height: 32px;
+	  position: absolute;
+	  top: -7px;
+	  left: -5px;
+	  cursor: pointer;
+	  opacity: 0; /* hide this */
+	  z-index: 2; /* and place it over the hamburger */
+	  
+	  -webkit-touch-callout: none;
+	}
+	
+	/*
+	 * Just a quick hamburger
+	 */
+	#menuToggle span
+	{
+	  display: block;
+	  width: 33px;
+	  height: 4px;
+	  margin-bottom: 5px;
+	  position: relative;
+	  background: red;
+	  border-radius: 3px;
+	  z-index: 1;
+	  transform-origin: 4px 0px;
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              opacity 0.55s ease;
+	}
+	#menuToggle span:first-child
+	{
+	  transform-origin: 0% 0%;
+	}
+	
+	#menuToggle span:nth-last-child(2)
+	{
+	  transform-origin: 0% 100%;
+	}
+	
+	/* 
+	 * Transform all the slices of hamburger
+	 * into a crossmark.
+	 */
+	#menuToggle input:checked ~ span
+	{
+	  opacity: 1;
+	  transform: rotate(45deg) translate(-2px, -1px);
+	  background: red;
+	}
+	
+	/*
+	 * But let's hide the middle one.
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(3)
+	{
+	  opacity: 0;
+	  transform: rotate(0deg) scale(0.2, 0.2);
+	}
+	
+	/*
+	 * Ohyeah and the last one should go the other direction
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(2)
+	{
+	  opacity: 1;
+	  transform: rotate(-45deg) translate(0, -1px);
+	}
+	
+	/*
+	 * Make this absolute positioned
+	 * at the top right of the screen
+	 */
+	#menu
+	{
+	  position: absolute;
+	  width: 300px;
+	  margin: -100px 0 0 -265px;
+	  padding: 50px;
+	  padding-top: 125px;
+	  
+	 
+	  background: white;
+	  opacity: 0.8;
+	  list-style-type: none;
+	  -webkit-font-smoothing: antialiased;
+	  /* to stop flickering of text in safari */
+	  
+	  transform-origin: 0% 0%;
+	  transform: translate(100%, 0);
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	}
+	
+	#menu li
+	{
+	  list-style:none;
+	  padding: 10px 0;
+	  margin-left: -12px;
+	  font-size: 18px;
+	}
+	
+	/*
+	 * And let's fade it in from the left
+	 */
+	#menuToggle input:checked ~ ul
+	{
+	  transform: scale(1.0, 1.0);
+	  opacity: 0.9;
+	}
+	/******************DESKTOP - Menu END ******************/
 
 /****************** INDEX AKA STORIES ******************/
 	.storiesContent
