--- a/MECAMobile/css_and_ai/styles.css
+++ b/MECAMobile/css_and_ai/styles.css
@@ -542,7 +542,7 @@
 	    position:fixed;
 	    top:0;
 	    width:100%;
-	    height: 125px;
+	    height: 92px;
 	    z-index:100;
 	}
 	
@@ -552,7 +552,7 @@
 		float: left;
 		z-index:5;
 		margin-top: 26px;
-		margin-left: 40px;
+		margin-left: 60px;
 		
 	}
 	.headerPic img
@@ -581,7 +581,7 @@
 	  display: block;
 	  position: relative;
 	  top: 45px;
-	  right: 58px;
+	  right: 65px;
 
 	  z-index: 1;
 	  
@@ -707,7 +707,7 @@
 /****************** INDEX AKA STORIES ******************/
 	.storiesContent
 	{
-		margin-top: 125px;
+		margin-top: 150px;
 		display: flex;
 		margin-left: 3%;
 	}
@@ -784,7 +784,7 @@
 	/******************ABOUT / SUBMISSIONS******************/
 	.submissionBoard form, .aboutContent 
 	{
-		margin-top: 245px;
+		margin-top: 200px;
 		margin-left:5%;
 	}
 	.wrapAbout img
@@ -814,6 +814,10 @@
 		margin-left:5.5%;
 		width: 55%;
 		height: 260px;
+	}
+	.submitButton{
+		float: left;
+		width: 12%;
 	}
 	
 	
